--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "expand-range": "^1.8.2",
     "lodash": "^4.17.4",
     "mongodb": "^2.2.26",
+    "node-schedule": "^1.2.3",
     "redis": "^2.7.1",
     "request": "^2.81.0",
     "request-promise": "^4.2.1",
